# sequencefile-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md  index.html  search-index.js
.circleci/: config.yml
benches/: lib_bench.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
sequencefile/: enum.Codec.html  enum.CompressionType.html  index.html  sidebar-items.js  struct.Header.html  type.ByteString.html
sequencefile/compress/: enum.Codec.html  enum.CompressionType.html  sidebar-items.js
sequencefile/reader/: index.html  sidebar-items.js  struct.Reader.html
src/: compress.rs  errors.rs  lib.rs  reader.rs  tests.rs  text.rs  util.rs  writable.rs
src/sequencefile/: compress.rs.html  lib.rs.html  reader.rs.html
test_data/: abc_long_text_bzip2_block.seq  abc_long_text_bzip2_record.seq  abc_long_text_deflate_block.seq  abc_long_text_deflate_record.seq  abc_long_text_gzip_block.seq  abc_long_text_gzip_record.seq  abc_long_text_none.seq  abc_long_text_snappy_block.seq  abc_long_text_snappy_record.seq  bad_magic.seq  complex.seq  metadata.seq  simple.seq
