[package]
name = "sequencefile"
version = "0.1.2"
authors = ["Michael Rose <elementation@gmail.com>"]
description = "Library for reading Hadoop sequencefiles."
keywords = ["hadoop", "sequencefile"]
homepage = "https://github.com/xorlev/rust-sequencefile.git"
repository = "https://github.com/xorlev/rust-sequencefile.git"
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "0.4"
flate2 = "0.2"
bzip2 = "0.2"

[dev-dependencies]
env_logger = "0.3"
