[package]
name = "sequencefile"
version = "0.1.4"
authors = ["Michael Rose <elementation@gmail.com>"]
keywords = ["hadoop", "sequencefile", "decoding"]
homepage = "https://github.com/xorlev/rust-sequencefile.git"
repository = "https://github.com/xorlev/rust-sequencefile.git"
documentation = "https://xorlev.github.io/rust-sequencefile/"
license = "MIT/Apache-2.0"
description = """
Native Rust library for working with Hadoop sequence files. Only handles reading currently.
"""

[dependencies]
byteorder = "0.4"
flate2 = "0.2"
bzip2 = "0.2"
