[package]
name = "sequencefile"
version = "0.2.0"
authors = ["Michael Rose <elementation@gmail.com>"]
keywords = ["hadoop", "sequencefile", "decoding"]
homepage = "https://github.com/xorlev/sequencefile-rs"
repository = "https://github.com/xorlev/sequencefile-rs.git"
documentation = "https://docs.rs/sequencefile"
license = "MIT/Apache-2.0"
description = """
Native Rust library for working with Hadoop sequence files. Only handles reading currently.
"""

[dependencies]
byteorder = "0.4"
flate2 = "0.2"
bzip2 = "0.2"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "lib_bench"
harness = false

[profile.bench]
debug = true